Second attempt to fix footer spacing issue.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -109,7 +109,7 @@ h1 {
 }
 
 .footer span {
-    width: 70%;
+    width: 60%;
     display: flex;
     margin: auto;
     gap: 2rem;
